--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>Sample Tracker</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 <nav>
   <h1>Sample Tracker</h1>
   <ul>
