--- a/flaskr/templates/dashboard/extractions.html
+++ b/flaskr/templates/dashboard/extractions.html
@@ -11,16 +11,34 @@
   {% for extraction in extractions %}
     <article class="extraction">
       <header>
-        <div>
-          <h1>{{ extraction['extractionName'] }}</h1>
-          <div>Goal Date: {{ extraction['goalDate'] }}</div>
-          <div>Analyst: {{ extraction['analyst'] }}</div>
-          <div>Notes: {{ extraction['notes'] }}</div>
-          <div>Buffers Added: {{ extraction['bbpAdded'] }}</div>
-          <div>Extraction Completed: {{ extraction['extracted'] }}</div>
+        <div class="extraction-info">
+          <div>
+            <h1>{{ extraction['extractionName'] }}</h1>
+            <div>Goal Date: {{ extraction['goalDate'] }}</div>
+            <div>Analyst: {{ extraction['analyst'] }}</div>
+            <div>Notes: {{ extraction['notes'] }}</div>
+          </div>
+          <div>
+            <div>
+              {% if extraction['bbpAdded'] %}
+                Buffers Added &check;
+              {% endif %}
+            </div>
+            <div>
+              {% if extraction['extracted'] %}
+                Extraction Complete &check;
+              {% endif %}
+            </div>
+          </div>
         </div>
+
           <a class="action" href="{{ url_for('dashboard.updateExtraction', id=extraction['id']) }}">Edit</a>
+
+          <a class="action" href="{{ url_for('dashboard.showExtractionSet', id=extraction['id']) }}">Associated Samples</a>
       </header>
+      {% if not extraction['extracted'] %}
+        <a class="action" href="{{ url_for('dashboard.processExtraction', id=extraction['id']) }}">PROCESS</a>
+      {% endif %}
     </article>
     {% if not loop.last %}
       <hr>
