--- a/flaskr/templates/dashboard/showExtractionSet.html
+++ b/flaskr/templates/dashboard/showExtractionSet.html
@@ -9,7 +9,7 @@
   <ul>
   {% for associatedSample in associatedSamples %}
 
-        <li>test {{ associatedSample['sampleName'] }}</li>
+        <li>{{ associatedSample['sampleName'] }}</li>
 
   {% endfor %}
   </ul>
