--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -24,6 +24,8 @@
     <li><a href="/">Samples</a></li>
     <li>|</li>
     <li><a href="/extractions">Extractions</a></li>
+    <li>|</li>
+    <li><a href="/archive">Archive</a></li>
   </ul>
 </nav>
 {% endif %}
