--- a/flaskr/templates/dashboard/extractions.html
+++ b/flaskr/templates/dashboard/extractions.html
@@ -9,6 +9,7 @@
     <div>Extraction</div>
     <div>Status</div>
     <div>Associated Samples</div>
+    <div>Archive</div>
   </div>
 {% endblock %}
 
@@ -47,6 +48,12 @@
           <div> 
             <a class="action" href="{{ url_for('dashboard.showExtractionSet', id=extraction['id']) }}">Associated Samples</a>
           </div>
+          <div class="archive-button-container">
+            {% if extraction['extracted'] %}
+                <a class="archive-button action" href="{{ url_for('dashboard.archiveExtraction', id=extraction['id']) }}">ARCHIVE</a>
+            {% endif %}
+          </div>
+            
       </div>
     </article>
     {% if not loop.last %}
